# Prone

./: .gitignore  DONE  README  TODO  compile-clojurescript.sh  sociabl.cabal
resources/templates/: index.tpl
src/cljs/sociabl/: logging.cljs  modelclient.cljs  serverconn.cljs  testing.cljs  webclient.cljs
src/cljs/test/sociabl/: alltests.cljs  modelclient_test.cljs  serverconn_test.cljs
src/cljs/websocket-test/: core.cljs
src/haskell/Sociabl/: Actor.hs  ActorMessageJSON.hs  Logging.hs  Main.hs  SimpleChatroom.hs  SubscriberModel.hs  Webserver.hs  WebsocketServer.hs
src/haskell/Sociabl/Actors/: WebpageCounterActor.hs
src/haskell/Sociabl/Parsers/: JSONParsers.hs  WebsocketTestMessage.hs
test/: compile-clojurescript-tests.sh  runClojureScriptTests.sh  runTestsAndCoverage.sh  sociabl-testsuite.cabal
test/suite/: TestSuite.hs
test/suite/Sociabl/Actor/: Tests.hs
test/suite/Sociabl/ActorMessageJSON/: Tests.hs
test/suite/Sociabl/Actors/WebpageCounterActor/: Tests.hs
test/suite/Sociabl/SubscriberModel/: Tests.hs
test/suite/Sociabl/WebsocketServer/: Tests.hs
websocket-test/: compile-clojurescript.sh  run-server.sh  websocket-test.cabal
websocket-test/src/: Main.hs
