Name: Sociabl-TestSuite
Version: 0.0.1
Build-type: Simple
Cabal-version: >= 1.6

Executable testsuite

  hs-source-dirs: ../src/haskell suite

  main-is: TestSuite.hs

  build-depends: aeson >= 0.3.2.9,
                 attoparsec >= 0.8.6.1 && < 0.8.6.2,
                 base,
                 bytestring >= 0.9.1.10,
                 containers,
                 hashable >= 1.1.2.0, 
                 hashmap >= 1.2.0.0,
                 hslogger >= 1.1.4,
                 HUnit >= 1.2.2.3,
                 mtl >= 2.0.1.0,
                 network >= 2.3.0.2,
                 stm >= 2.2.0.1,
                 test-framework >= 0.3.1 && <0.4,
                 test-framework-hunit >= 0.2.5 && < 0.3,
                 test-framework-quickcheck2 >= 0.2.6 && < 0.3,
                 text >= 0.11.1.3 && < 0.11.1.4,
                 utf8-string >= 0.3.6,
                 vector,
                 websockets >= 0.3.0.0

  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -fhpc -threaded
               -fno-warn-unused-do-bind
