Name: Sociabl-TestSuite
Version: 0.0.1
Build-type: Simple
Cabal-version: >= 1.6

Executable websocket-test

  hs-source-dirs: ../src/haskell src

  main-is: Main.hs

  build-depends: aeson >= 0.3.2.9,
                 attoparsec >= 0.8.6.1 && < 0.8.6.2,
                 base,
                 bytestring >= 0.9.1.10,
                 containers,
                 hashable >= 1.1.2.0, 
                 hashmap >= 1.2.0.0,
                 heist >= 0.5.2,
                 hslogger >= 1.1.4,
                 mtl >= 2.0.1.0,
                 network >= 2.3.0.2,
                 snap >= 0.5.1.3,
                 snap-core >= 0.5.1.4,
                 snap-server >= 0.5.1.4,
                 stm >= 2.2.0.1,
                 text >= 0.11.1.3 && < 0.11.1.4,
                 utf8-string >= 0.3.6,
                 vector,
                 websockets >= 0.3.0.0

  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -fhpc -threaded
               -fno-warn-unused-do-bind
